--- a/ggplot2/R Graphics Cookbook.Rmd
+++ b/ggplot2/R Graphics Cookbook.Rmd
@@ -1,9 +1,10 @@
 ---
-title: "ggplot2_notes"
+title: "R cookbook"
 output: html_notebook
 ---
 
 ```{r}
 library(tidyverse)
+library(ggplot2)
 ```
 
